--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 		<h1>1. Pré-cadastro e agendamento de atendimento inicial
         </h1></div> -->
         
-        <div id="clique-dica"> <p>Clique para mais informações</p> <img src="imgs/hand.png"></div>
+        <div id="clique-dica"> <p>Click for more informations!</p> <img src="imgs/hand.png"></div>
          
 		</div>  
 
