--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Detran Recurso</title>
+<title>Interactive point</title>
 
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/jquery.rwdImageMaps.min.js"></script>
