--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <body>
 	
 	<div id="ri-container">
+	    <div id="size-advise">Para uma experiência mais interativa, acesse este recurso de Computadores ou Notebooks.</div>
 		<div id="overlay-black"><img src="imgs/overlay-black.png"></div>
 		<div id="line"><img src="imgs/line.png"></div>
 		<div id="tooltips" ></div>
